chores(docs): update wording and formatting for various docs

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -620,7 +620,7 @@ crontab 的基本语法是：
 
 仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的用户，需要自行办理独立域名与应用绑定的相关手续。
 
-**请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**
+**请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**。
 
 其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
 
@@ -642,8 +642,8 @@ crontab 的基本语法是：
 
 其他企业用户，若尚未在国内对其域名进行过备案，可以申请由我们协助来完成备案工作。其流程大致如下：
 
-1. 你提供相应资料，我们来录入；完成后提供备案订单号给你，请在联系备案服务商时提供。
-2. 请携带资料去备案提供商的核验点拍照；如果不方便，备案服务商会安排给你邮寄幕布，进行拍照验证，完成后请将其它资料签字盖章后一起邮寄给备案提供商。
+1. 请提供相应资料，我们来录入；完成后提供备案订单号给你，请在联系备案服务商时提供。
+2. 请携带资料去 [备案提供商的核验点](#isp_inspection_office) 拍照；如果不方便，备案服务商会安排给你邮寄幕布，进行拍照验证，完成后请将其他资料签字盖章后一起邮寄给备案提供商。
 3. 提交备案到（公司所在地）管局（通信管理局）审核。
 
 <div class="callout callout-info">请注意：国内各地管局对备案的政策有差别，如北京地区对域名后缀有限制，陕西地区需要提交组织机构代码证，山东地区要求服务器必须托管在山东省内（因此我们无法为山东地区用户备案）等。具体请查询当地管局。</div>
@@ -653,13 +653,72 @@ crontab 的基本语法是：
 请提交以下资料，我们来帮你录入到系统：
 
 1. 单位名称、单位通信地址、营业执照号码、营业执照副本扫描件；
-2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ号码；
-3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ号码；
-4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个）
+2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ 号码；
+3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ 号码；
+4. 网站名称（4 个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个）
 5. 网站服务内容，请在以下列表中选择一项：
-   综合门户，搜索引擎，单位门户网站，网络游戏，网络广告，即时通讯，网上邮局，网络新闻，博客/个人空间，网络广告/信息，网络购物，网上支付，网上银行，网上炒股/股票基金，网络影视，网络图片，网络软件/下载，网上求职，网上交友/婚介，网上房产，网络教育，网站建设，WAP，其它
+  <div class="row">
+  <div class="col-sm-3">
+综合门户<br/>
+搜索引擎<br/>
+单位门户网站<br/>
+网络游戏<br/>
+网络广告<br/>
+即时通讯<br/>
+网上邮局<br/>
+网络新闻<br/>
+  </div>
+  <div class="col-sm-3">
+博客/个人空间<br/>
+网络广告/信息<br/>
+网络购物<br/>
+网上支付<br/>
+网上银行<br/>
+网上炒股/股票基金<br/>
+网络影视<br/>
+网络图片<br/>
+  </div>
+  <div class="col-sm-3">
+网络软件/下载<br/>
+网上求职<br/>
+网上交友/婚介<br/>
+网上房产<br/>
+网络教育<br/>
+网站建设<br/>
+WAP<br/>
+其它<br/>
+  </div>
+  <div class="col-sm-3">
+  </div>
+</div><br/>
 6. 网站语言，请在以下列表中选择一项：
-   中文简体，中文繁体，维吾尔语，哈萨克语，柯尔克孜语，蒙古语，藏语，壮语，朝鲜语，彝语，苗语，英语，日语，法语，俄罗斯语，西班牙语，阿拉伯语
+   <div class="row">
+  <div class="col-sm-3">
+中文简体<br/>
+中文繁体<br/>
+维吾尔语<br/>
+哈萨克语<br/>
+柯尔克孜语<br/>
+蒙古语<br/>
+  </div>
+  <div class="col-sm-3">
+藏语<br/>
+壮语<br/>
+朝鲜语<br/>
+彝语<br/>
+苗语<br/>
+英语<br/>
+  </div>
+  <div class="col-sm-3">
+日语<br/>
+法语<br/>
+俄罗斯语<br/>
+西班牙语<br/>
+阿拉伯语<br/>
+  </div>
+  <div class="col-sm-3">
+  </div>
+</div><br/>
 7. [绑定独立域名](绑定独立域名) 所需的信息。
 8. 如果需要邮寄幕布，请提供你的地址、电话及联系人名字。
 
@@ -669,33 +728,40 @@ crontab 的基本语法是：
 
 请去备案提供商的核验点拍照，或者提供你的地址，我们的备案接入商来给你邮寄幕布，因为幕布数量的关系，这里可能需要排队。以下资料需要准备：
 
-1.  企业营业执照副本复印件，盖公章；
-2.  企业法人身份证复印件（正反面复印在一张纸上），盖公章；
-3.  网站负责人身份证复印件（正反面复印在一张纸上），盖公章（如果和企业法人是同一人的话，此条可忽略）；
-4.  [网站备案信息真实性核验单(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)
-5.  [网络安全责任书(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)
-6.  [法人授权书复印件(点我下载填写样例)](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)
+1. 企业营业执照副本复印件，盖公章；
+2. 企业法人身份证复印件（正反面复印在一张纸上），盖公章；
+3. 网站负责人身份证复印件（正反面复印在一张纸上），盖公章（如果和企业法人是同一人的话，此条可忽略）；
+4. 网站备案信息真实性核验单（[下载填写样例](https://beianv2.ucloud.cn/files/%E7%BD%91%E7%AB%99%E7%9C%9F%E5%AE%9E%E6%80%A7%E6%A0%B8%E9%AA%8C%E5%8D%95%E6%A0%B7%E4%BE%8B.zip)）
+5. 网络安全责任书（[下载填写样例](https://beianv2.ucloud.cn/files/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%E4%B9%A6.zip)）
+6. 法人授权书复印件（[下载填写样例](https://beianv2.ucloud.cn/files/%E6%B3%95%E4%BA%BA%E6%8E%88%E6%9D%83%E4%B9%A6.zip)）
 
-备案拍照核验点地址：
+<a id="isp_inspection_office" name="isp_inspection_office"></a>**备案拍照核验点地址：**
 
-* 上海市杨浦区隆昌路619号城市概念创意园区8号楼北区A01室   预约电话：021-65012912
-* 北京市海淀区海淀北二街中关村SOHO B区—510室   预约电话：15901173539
-* 深圳市南山区科技中二路威盛科技大厦602室   预约电话：13794465215
-* 青岛市崂山区松岭路169号蓝色硅谷软件中心202室   预约电话：0532-67788606-8810 / 0532-83842530-8810
-* 广州市天河区科韵路12-1号方圆E时光东座705室   预约电话：020-85269240
-* 成都高新区天府大道香年广场T3-2605   预约电话：028-65292613
+城市|地址|预约电话
+---|---|---
+北京|北京市海淀区海淀北二街中关村 SOHO B 区—510 室|15901173539
+上海|上海市杨浦区隆昌路 619 号城市概念创意园区 8 号楼北区 A01 室|021-65012912
+广州|广州市天河区科韵路 12-1 号方圆 E 时光东座 705 室|020-85269240
+成都|成都高新区天府大道香年广场 T3-2605|028-65292613
+深圳|深圳市南山区科技中二路威盛科技大厦 602 室|13794465215
+青岛|青岛市崂山区松岭路 169 号蓝色硅谷软件中心 202 室|0532-67788606-8810<br/> 0532-83842530-8810
 
-备案资料邮寄地址：
+<a id="isp_mailing" name="isp_mailing"></a>**备案资料邮寄地址：**
 
-######北京
-**地　　址**：北京市海淀区中关村SOHO 510室<br/>
-**备案专员**：网站备案部<br/>
-**联系电话**：010-59718403<br/>
-
-######上海
-**地　　址**：上海市杨浦区隆昌路619号城市概念8号楼北区A01<br/>
-**备案专员**：备案组<br/>
-**联系电话**：021-55509888<br/>
+<div class="row">
+  <div class="col-sm-6">
+<p><strong>北京</strong></p>
+北京市海淀区中关村 SOHO 510 室<br/>
+网站备案部<br/>
+010-59718403<br/>
+  </div>
+  <div class="col-sm-6">
+<p><strong>上海</strong></p>
+上海市杨浦区隆昌路 619 号城市概念 8 号楼北区 A01<br/>
+备案组<br/>
+021-55509888<br/>
+</div>
+</div>
 
 ##### 第三步
 
@@ -821,7 +887,3 @@ console.log('getHours', time.hours())
 为了方便大家的使用，更加符合通常的习惯，云引擎运行时环境（无沙箱的 Node.js 环境和 Python 环境）都是使用**东八区**作为默认时区。当然，我们仍然建议程序的时间字符串带有时区标志。
 
 {% block introduceCloudCodeV2 %}{% endblock %}
-
-
-
-
