feat(homepage): update list responsive for small screens

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -261,8 +261,9 @@ body {
     list-style: none;
 
     li {
-      line-height: 2.2;
+      line-height: 1.4;
       font-size: 15px;
+      margin-bottom: .6em;
     }
   }
 }
