--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -58,7 +58,7 @@
   <!-- .row -->
 
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>功能和服务概览</h2>
         <ul>
@@ -74,7 +74,7 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>iOS / OS X SDK</h2>
         <ul>
@@ -94,7 +94,7 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>Android SDK</h2>
         <ul>
@@ -111,7 +111,7 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>JavaScript SDK</h2>
         <ul>
@@ -133,7 +133,7 @@
 <hr>
   <div class="row">
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>.NET / Unity3D</h2>
         <ul>
@@ -149,7 +149,7 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>Python SDK</h2>
         <ul>
@@ -160,7 +160,7 @@
       </div>
     </div>
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>REST API 和开放平台</h2>
         <ul>
@@ -177,7 +177,7 @@
     </div>
     <!-- .col-md-4 -->
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>云引擎（云代码）</h2>
         <ul>
@@ -198,7 +198,7 @@
 <hr>
   <div class="row">
 
-    <div class="col-md-3">
+    <div class="col-md-3 col-xs-6">
       <div class="link-block">
         <h2>其他组件</h2>
         <ul>
@@ -213,7 +213,7 @@
       </div>
     </div>
 
-   <div class="col-md-3">
+   <div class="col-md-3 col-xs-6">
      <div class="link-block">
        <h2>下载和其他</h2>
        <ul>
