feat(postman): update layout and screenshot

--- a/templates/pages/postman.html
+++ b/templates/pages/postman.html
@@ -45,11 +45,6 @@
   <li>引入 <a href="images/postman/APITest.postman_environment">LeanCloud 应用级别环境变量文件</a>，定义了应用的 AppID，AppKey，Master Key。可以替换成开发者自己的应用的相关值</li>
 </ol>
 
-<hr>
-
-<h3>
-  预览
-</h3>
 <p>
-  <img src="images/postman/postman.png" class="img-thumbnail" >
+  <img src="images/postman/postman.png">
 </p>
