--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -62,10 +62,11 @@ body {
 .doc-content {
 
   h1 {
-    font-size: 26px;
+    font-size: 32px;
     font-weight: 300;
-    padding-top: 20px;
+    padding-top: 90px;
     margin-top: 0px;
+    .font-logo;
 
     a {
       color: #000;
@@ -560,10 +561,8 @@ ul#toc,#toc li {
 }
 
 .docs-meta {
-  float: right;
   overflow: auto;
-  padding-left: 15px;
-  margin-top: 20px;
+  margin-top: 17px;
   color: @gray-lighter;
 
   @media (max-width: @screen-sm) {
@@ -589,7 +588,9 @@ ul#toc,#toc li {
 
 .github-contributors {
   .list-unstyled;
+  padding-bottom: 100px;
   margin-bottom: 20px;
+  border-bottom: 1px solid @gray-lighter;
 
   li {
     display: inline;
@@ -617,6 +618,10 @@ ul#toc,#toc li {
 
   &.with-comment {
     padding-left: 16px;
+
+    @media (max-width: @screen-sm-max) {
+      padding-left: 0;
+    }
   }
 
   @media (max-width: 640px) {
