--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -1,10 +1,15 @@
 --- layout: download.swig ---
 <link rel="alternate" type="application/atom+xml" title="LeanCloud SDK Update Feed" href="https://download.leancloud.cn/sdk/feed.xml" />
 <div class="row" ng-controller="DownCtrl">
+
   <div class="col-md-12">
-    <h1 style="margin-top: 0;">
-    SDK 下载 <a href="https://download.leancloud.cn/sdk/feed.xml" class="changelog-rss bstooltip" title="所有平台 SDK 的 RSS 更新"><i class="icon icon-rss"></i> RSS</a>
-  </h1>
+    <div class="doc-home-title">
+      <h1 class="font-logo">
+        LeanCloud SDK 下载 <a href="https://download.leancloud.cn/sdk/feed.xml" class="changelog-rss bstooltip" title="所有平台 SDK 的 RSS 更新"><i class="icon icon-rss"></i> RSS</a>
+      </h1>
+      <h4>SDK 及相关资源下载</h4>
+    </div>
+    <!-- .doc-home-title -->
   </div>
   <!-- .col-md-12 -->
 
