feat(homepage): we have search feature!

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -225,6 +225,11 @@ body {
     margin-top: 0;
     padding-top: 0;
   }
+
+  .hero-search {
+    max-width: 400px;
+    margin: 15px auto;
+  }
 }
 
 .doc-hero-links-wrap {
