--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,12 @@
 <div class="home-full-width-content">
   <div class="doc-home-title text-center">
     <h1 class="font-logo">LeanCloud Documentation</h1>
-    <h4>LeanCloud 官方开发者文档 <a href="leancloud-docs.tar.gz">离线下载</a></h4>
+    <h4>LeanCloud 官方开发者文档（<a href="leancloud-docs.tar.gz">离线下载</a>）</h4>
+    <form class="hero-search" role="search" action="/search.html" method="get">
+      <div class="form-group">
+        <input name="q" type="text" class="form-control input-lg" placeholder="搜索文档：真的很好用！快来搜一下！&hellip;">
+      </div>
+    </form>
   </div>
   <!-- .doc-home-title -->
 
