fix(doc) 备案：小更新和修复

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -652,7 +652,7 @@ crontab 的基本语法是：
 
 请提交以下资料，我们来帮你录入到系统：
 
-1. 单位名称、单位通信地址、营业执照号码、营业执照副本扫描件；
+1. 单位名称、单位注册地址、单位通信地址、营业执照号码、营业执照副本扫描件；
 2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ 号码；
 3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址（可以为单位通信地址）、QQ 号码；
 4. 网站名称（4 个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个）
@@ -719,7 +719,7 @@ WAP<br/>
   <div class="col-sm-3">
   </div>
 </div><br/>
-7. [绑定独立域名](绑定独立域名) 所需的信息。
+7. [绑定独立域名](#绑定独立域名) 所需的信息。
 8. 如果需要邮寄幕布，请提供你的地址、电话及联系人名字。
 
 如果企业之前已经备案过其他网站，即备案主体已经存在，此时还应向我们提供备案密码，我们才能完成资料录入工作。
