fix(docs): 去掉重复部分

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -309,6 +309,8 @@ AV.Cloud.afterUpdate('Post', function(request) {
   });
 ```
 
+**提示**：从云引擎 3.0 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
+
 ### 错误响应码
 
 {% block errorCodeExample %}{% endblock %}
