--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -192,7 +192,7 @@ API 参数详解参见 {% block runFuncApiLink %}{% endblock %}。
 
 Hook 函数本质上是云函数，但它有固定的名称，定义之后会**由系统**在特定事件或操作（如数据保存前、保存后，数据更新前、更新后等等）发生时**自动触发**，而不是由开发者来控制其触发时机。
 
-关于使用 Hook 函数时所需要注意的要点，请参考下文的 [防止死循环调用](#防止死循环调用)。
+使用 Hook 函数需要注意 [防止死循环调用](#防止死循环调用)。
 
 #### {{hook_before_save}}
 
