fix(docs): 修正云引擎版本号

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -313,7 +313,7 @@ AV.Cloud.afterUpdate('Post', function(request) {
   });
 ```
 
-**提示**：云引擎从 3.0 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
+**提示**：云引擎从 [0.3.0](https://github.com/leancloud/leanengine-node-sdk/blob/master/CHANGELOG.md#v030-20151231) 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
 
 ### 错误响应码
 
