modify android api doc path

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -119,7 +119,7 @@
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
             <li><a href="sms_guide-android.html">短信验证使用指南</a></li>
             <li><a href="android_faq.html">FAQ</a></li>
-            <li><a href="/api-docs/android/doc/index.html" target="_blank">Android SDK API</a></li>
+            <li><a href="/api-docs/android/index.html" target="_blank">Android SDK API</a></li>
           </ul>
         </li>
         <li class="dropdown">
