fix(docs): 更新应用选项和安全中心的选项，与控制台一致
Closes #902, #903, #904, #905, #906, #907, #908, #909, #910, #911,
#912, #913, #914, #915

并修复用户评论中反馈出的一些 typos。

--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -39,35 +39,29 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ## 短信服务配置
 
-首先，进入控制台，选择一个应用，点击 **设置** > **安全中心**，如下图所示：
+从应用级别来控制能否发送短信，进入 [控制台 > 设置 > **安全中心**](/app.html?appid={{appid}}#/security)，设置 **短信发送** 开关。
 
-![sms_switch](images/sms_switch_setting.png)
+然后点击 [**应用选项**](/app.html?appid={{appid}}#/permission)，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
 
-然后点击 **应用选项**，查看短信相关选项，如下图：
-
-![sms_setting](images/sms_setting_option.png)
-
-我们来对上图做下详细介绍（选项默认被勾选表示开启短信服务之后，该项默认也是开启的）。
-
-- 【&check;】**验证注册用户手机号码**  
-  开启：调用 AVUser 注册相关的接口时，如果传入了手机号，则系统会自动发送验证短信，然后开发者需要手动调用一下验证接口之后，如此做在 `_User` 表中的 `mobilePhoneVerified` 值会被置为 `true`。  
+- 【&check;】用户账号 > **用户注册时，向注册手机号码发送验证短信**<br/>
+  开启：调用 AVUser 注册相关的接口时，如果传入了手机号，则系统会自动发送验证短信，然后开发者需要手动调用一下验证接口之后，如此做在 `_User` 表中的 `mobilePhoneVerified` 值会被置为 `true`。<br/>
   关闭：调用 AVUser 注册相关的接口不会发送短信。
 
-- **禁止未验证手机号码登录**  
-  开启：未验证手机号的 `AVUser` 不能使用「手机号+密码」以及「手机号+短信验证码」的方式登录，但是<span style="border-bottom:1px solid #333; padding-bottom:2px">用户名搭配密码的登录方式不会失败</span>。  
+- 用户账号 > **未验证手机号码的用户，禁止登录**<br/>
+  开启：未验证手机号的 `AVUser` 不能使用「手机号+密码」以及「手机号+短信验证码」的方式登录，但是<span style="border-bottom:1px solid #333; padding-bottom:2px">用户名搭配密码的登录方式不会失败</span>。<br/>
   关闭：不会对登录接口造成任何影响。
 
-- **允许用户使用手机短信登录**  
-  开启：`AVUser` 可以使用手机号搭配短信验证码的方式登录。  
+- 用户账号 > **未验证手机号码的用户，允许以短信重置密码**<br/> 
+  开启：允许尚未验证过手机号的 `AVUser` 通过短信验证码实现重置密码的功能。<br/> 
+  关闭：`AVUser` 必须在使用短信重置密码之前，先行验证手机号，也就是 `mobilePhoneVerified` 字段必须是 `true` 的前提下，才能使用短信重置密码。
+
+- 用户账号 > **已验证手机号码的用户，允许以短信验证码登录**<br/>
+  开启：`AVUser` 可以使用手机号搭配短信验证码的方式登录。<br/>  
   关闭：`AVUser` 不能直接使用。
 
-- 【&check;】**启用账号无关短信验证服务（针对 requestSmsCode 和 verifySmsCode 接口）**  
-  开启：开发者可以使用短信进行验证功能的开发，比如，敏感的操作认证、异地登录、付款验证等业务相关的需求。  
+- 【&check;】其他 > **启用通用的短信验证码服务（开放 requestSmsCode 和 verifySmsCode 接口）**<br/> 
+  开启：开发者可以使用短信进行验证功能的开发，比如，敏感的操作认证、异地登录、付款验证等业务相关的需求。<br/>
   关闭：请求验证发送短信以及验证短信验证码都会被服务端拒绝，但是请注意，跟用户相关的验证与该选项无关。
-
-- **允许未验证手机号码用户通过短信重置密码**  
-  开启：允许尚未验证过手机号的 `AVUser` 通过短信验证码实现重置密码的功能。  
-  关闭：`AVUser` 必须在使用短信重置密码之前，先行验证手机号，也就是 `mobilePhoneVerified` 字段必须是 `true` 的前提下，才能使用短信重置密码。
 
 了解以上配置项有助于开发者针对业务需求，在功能选择上做出调整。下面，我们根据不同的需求逐一介绍短信服务的功能。
 
@@ -78,7 +72,6 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 当微信发现用户忽然在一台从未授权过的新设备上登录时，如果该用户已经开启了「安全验证」，那么它会向该用户的手机号发一条验证短信，以验证当前登录是否为本人操作。微信是一个较为私密的社交应用，随着使用时间的增加，用户的手机号、聊天记录都可能涉及到更为私密的信息。
 
 开发者在开发过程中也可能会遇到与微信类似的场景和需求。
-
 
 ### 操作认证
 
@@ -101,6 +94,7 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 针对上述的需求，可以把场景换成异地登录验证、修改个人敏感信息验证等一些常见的场景，步骤是类似的，调用的接口也是一样的，仅仅是在做 UI 展现的时候需要开发者自己去优化验证过程。
 
 ### 注册验证
+
 **用户注册**对所有开发者来说都是非常重要的，为了降低操作难度，越来越多的应用支持使用手机号码来快速注册账户，并且同时会通过短信验证码来核实用户手机号码的有效性。为了满足这一需求，我们将 LeanCloud 内建的[账户系统]({% block builtin_account_url %}{% endblock %})与短信验证码相结合，推出了便捷的「注册验证」功能。其使用步骤如下：
 
 1. **用户输入手机号以及密码**  
