Replace all「云代码」to「云引擎」

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -9,11 +9,11 @@
 
 云引擎允许你编写 JavaScript 或者 Python 代码，并部署到我们的云端，通过拦截 save 请求，在保存对象之前或之后做一些事情；你可以自定义业务函数，并通过 SDK 调用；你还可以调用部分第三方库来实现自己的业务逻辑，甚至还可以将整个网站架设在云引擎之上，我们提供了网站托管服务。
 
-现在我们将「云代码 2.0」的功能做了升级，开放性更高，并且更名为「云引擎」，即 LeanEngine。老的云代码产品将在一段时间内继续运行并且维护下去，但是云代码上的所有功能都能在云引擎上 实现，并且自由度更高，因此我们强烈建议将项目改由云引擎来实现。
+现在我们将「云引擎 2.0」的功能做了升级，开放性更高，并且更名为「云引擎」，即 LeanEngine。老的云引擎产品将在一段时间内继续运行并且维护下去，但是云引擎上的所有功能都能在云引擎上 实现，并且自由度更高，因此我们强烈建议将项目改由云引擎来实现。
 
-### 与云代码的区别
+### 与云引擎的区别
 
-* **标准的运行环境**：之前云代码是我们订制的一个沙箱运行环境，功能受限，并且代码只可以在云代码环境运行，难以迁移到自己搭建的后端服务器上。而云引擎环境可以部署标准项目。
+* **标准的运行环境**：之前云引擎是我们订制的一个沙箱运行环境，功能受限，并且代码只可以在云引擎环境运行，难以迁移到自己搭建的后端服务器上。而云引擎环境可以部署标准项目。
 * **多语言支持**：目前支持 Node.js 与 Python，将来会支持更多的编程语言运行环境。
 
 ### 命令行工具
@@ -914,7 +914,7 @@ WAP<br/>
 
 ## 时区问题
 
-因为某些原因，云代码 2.0 默认使用的是 UTC 时间，这给很多开发者带来了困惑，所以我们着重讨论下时区问题。
+因为某些原因，云引擎 2.0 默认使用的是 UTC 时间，这给很多开发者带来了困惑，所以我们着重讨论下时区问题。
 
 比如有这样一个时间：`2015-05-05T06:15:22.024Z` (ISO 8601 表示法)，最后末尾的 `Z` 表示该时间是 UTC 时间。
 
@@ -926,11 +926,11 @@ WAP<br/>
 
 【场景一】某开发者开发的应用使用云引擎的主机托管功能做了一个网站，其中有时间格式的表单提交。某用户使用浏览器访问该网站，提交表单，时间格式为：`2015-05-05 14:15:22.024`，注意该时间没有「时区」标志。因为这个时间是浏览器生成的，而该用户浏览器上的时间通常是东八区时间，所以该业务数据希望表达的时间是「东八区的 14 点」。
 
-该时间 `2015-05-05 14:15:22.024` 提交到服务器，被转换为 Date 类型（JavaScript 代码：`new Date('2015-05-05 14:15:22.024')`）。因为云代码 2.0 使用的是 UTC 时间，所以该时间会被处理为 `2015-05-05T14:15:22.024Z`，即「UTC 时间的 14 点」。导致最后获得的时间和期望时间相差了 8 小时。
+该时间 `2015-05-05 14:15:22.024` 提交到服务器，被转换为 Date 类型（JavaScript 代码：`new Date('2015-05-05 14:15:22.024')`）。因为云引擎 2.0 使用的是 UTC 时间，所以该时间会被处理为 `2015-05-05T14:15:22.024Z`，即「UTC 时间的 14 点」。导致最后获得的时间和期望时间相差了 8 小时。
 
 解决上面的办法很简单：时间格式带上时区标志。即浏览器上传时间时使用 `2015-05-05T14:15:22.024+0800`，这样不管服务端默认使用什么时区，带有时区的时间格式转换的 Date 都不会有歧义。
 
-【场景二】从数据库获取某记录的 `createdAt` 属性，假设值为：`2015-04-09T03:35:09.678Z`。因为云代码默认时区是 UTC，所以一些时间函数的返回结果如下：
+【场景二】从数据库获取某记录的 `createdAt` 属性，假设值为：`2015-04-09T03:35:09.678Z`。因为云引擎默认时区是 UTC，所以一些时间函数的返回结果如下：
 
 函数|结果
 ---|---
@@ -948,7 +948,7 @@ console.log('toString', time.toString());
 console.log('getHours', time.hours())
 ```
 
-### 云代码 2.0 和云引擎时区的差异
+### 云引擎 2.0 和云引擎时区的差异
 
 为了方便大家的使用，更加符合通常的习惯，云引擎运行时环境（无沙箱的 Node.js 环境和 Python 环境）都是使用**东八区**作为默认时区。当然，我们仍然建议程序的时间字符串带有时区标志。
 
