--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -181,7 +181,7 @@
           <ul class="dropdown-menu">
           <li><a href="leanengine_guide-node.html">云引擎（Node.js 环境）</a></li>
           <li><a href="leanengine_guide-python.html">云引擎（Python 环境）</a></li>
-          <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云代码环境）</a></li>
+          <li><a href="leanengine_guide-cloudcode.html">云引擎（旧版云引擎环境）</a></li>
           <li><a href="leanengine_upgrade_3.html">云引擎 2.0 升级 3.0 指南</a></li>
           <li><a href="cloud_code_commandline.html">云引擎命令行工具</a></li>
           <li><a href="acl_guide_leanengine.html">在云引擎中管理 ACL</a></li>
