fix(docs): 去掉安装文档中切换节点的多余描述

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -36,8 +36,7 @@ SDK 的初始化方法默认使用**中国大陆节点**，但是随着北美、
 
 初始化 SDK 时，可以使用如下代码，告知 SDK 对应的 App ID 以及 App Key 属于哪个节点：
 
-启用北美节点代码如下：
-{% block sdk_using_north_america_node %}{% endblock %}
+{% block sdk_switching_node %}{% endblock %}
 
 ## 验证
 
