--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -219,7 +219,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 {{relationObje
 
 {% block code_pointer_comment_one_to_many_todoFolder %}{% endblock %}
 
-关于关联数据的查询会在[关联数据查询](#关联数据查询)会详细介绍。
+关于关联数据的查询会在[关系查询](#关系查询)会详细介绍。
 
 #### 地理位置
 地理位置是一个特殊的数据类型，{{productName}} 封装了 {{geoPointObjectName}} 来实现存储以及相关的查询。
