--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -15,7 +15,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 ### 使用 Pointers 实现一对多关系
 #### Pointers 存储
-中国的「省份（直辖市）」与「城市（行政区）」的行政就是一个典型的一对多的关系，例如，深圳和广州（「城市」）都属于广东省（「省份」），而朝阳区和海淀区（「行政区」）只能属于北京市（「直辖市」）。广东省，北京市就是「一对多」关系中的「一」，而朝阳区以及海淀区，以及深圳还有广州是关系中的「多」。如下代码将演示，如何使用 Pointers 来存储这种一对多的关系。
+中国的「省份」与「城市」的就是一个典型的一对多的关系，例如，深圳和广州（「城市」）都属于广东省（「省份」），而朝阳区和海淀区（「行政区」）只能属于北京市（「直辖市」）。广东省对应着多个一级行程城市，北京对应着多个行政区。如下代码将演示，如何使用 Pointers 来存储这种一对多的关系。
 
 **注：为了表述方便，后文中提及城市都泛指一级行政市以及直辖市行政区，而省份也包含了北京，上海等直辖市。**
 
@@ -25,8 +25,10 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_city_point_to_province_with_objectId %}{% endblock %}
 
+执行上述代码，可以在控制台看见在 `dependent` 字段上它显示的是一个 Pointer 类型的数据，而它的本质上存储的是一个指向 `City` 这张表的某一个 `AVObject` 的一个指针。
+
 #### Pointers 查询
-假如我们已知一个城市，想知道它的上一级的省份，可以使用如下代码：
+假如已知一个城市，想知道它的上一级的省份，可以使用如下代码：
 
 {% block code_fetch_province_by_city %}{% endblock %}
 
@@ -34,7 +36,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_query_province_by_city %}{% endblock %}
 
-假如已知了一个省份，想知道他所有下辖的城市可以使用如下代码：
+假如已知了一个省份，想知道他所有下辖的城市，可以使用如下代码
 
 {% block code_query_city_by_province %}{% endblock %}
 
@@ -45,7 +47,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 #### Arrays 存储
 当我们知道一对多关系中包含的对象数量很小时，使用 Arrays 实现是比较理想的。Arrays 可以通过 `includeKey` 简化查询。传递对应的 key 可以在获取「一」方对象数据的同时获取到所有「多」方对象的数据。但是，如果关系中包含的对象数量巨大，查询将响应缓慢。
 
-假设在我们的城市与省份对应关系中，也可以使用 Arrays 实现，而且还需要保存每个城市汽车牌照上的字母顺序，例如广州是「粤 A」因此它排在数组的第一个位置，而深圳是「粤 B」以此类推，因此我们可以使用数组的顺序来一一对应，这样也可以节省一个字段存储各个城市的牌照字母。
+在我们的城市与省份对应关系中，也可以使用 Arrays 实现。
 
 我们重新建立对象，为 `Province` 对象添加一列：`cityList`，用来保存城市数组，代码如下：
 
@@ -56,7 +58,7 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block code_get_cityList_array %}{% endblock %}
 
-如果要在查询某一个省份的时候，顺便也把所有下辖的城市也获取到本地就可以在构建查询的时候使用 `Include` 操作，这样就可以通过一次查询同时获取 `cityList` 列中存放的 `City` 对象结合：
+如果要在查询某一个省份的时候，顺便把所有下辖的城市也获取到本地，可以在构建查询的时候使用 `Include` 操作，这样就可以通过一次查询同时获取 `cityList` 列中存放的 `City` 对象集合：
 
 {% block code_query_province_include_cityList %}{% endblock %}
 
@@ -138,5 +140,3 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 * **限制部分用户数据的权限** 在这个场景中，你可以将此对象拆分成两部分，一部分包含所有用户可见的数据，另一部分包含所有仅自己可见的数据（通过ACL控制）。同样，你也可以实现一部分包含所有用户可修改的数据，另一部分包含所有仅自己可修改的数据。
 * **避免大对象** 在这个场景中，你的原始对象大小大于了对象的上限值（128K），你可以创建另一个对象来存储额外的数据。当然，这通常需要更好地设计你的数据模型来避免出现大对象。如果确实无法避免，你也可以考虑使用AVFile存储大数据。
 * **更灵活的文件对象** AVFile 可以方便的存取文件，但是作为对象查询修改等不是很方便，可以使用 AVObject 构造一个自己的文件对象并与 AVFile 一对一关联，将文件属性存于AVObject 中，这样既可以方便查询修改文件属性，也可以方便存取文件。
-
-## 
