LeanEngine: 修改日志部分的限制

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -657,7 +657,7 @@ crontab 的基本语法是：
 
 {% block loggerExample %}{% endblock %}
 
-**注意**：如果你的日志输出过于频繁（超过 50 条/秒），我们会丢弃部分日志信息。
+**注意**：日志单行最大 4096 个字符，多余部分会被丢弃；日志输出频率大于 600 条/分钟，多余的部分会被丢弃。
 
 ## 网站托管
 
