--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -126,7 +126,7 @@
           <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
           <li><a href="js_analytics.html">统计分析开发指南</a></li>
           <li><a href="sms_guide-js.html">短信验证使用指南</a></li>
-          <li><a href="js_faq.html">FAQ</a></li>
+          <!-- <li><a href="js_faq.html">FAQ</a></li> -->
           <li><a href="/api-docs/javascript/index.html" target="_blank">JavaScript SDK API</a></li>
         </ul>
       </div>
