fix(LeanEngine): 补充 Cron 表达式的用法说明

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -313,7 +313,7 @@ AV.Cloud.afterUpdate('Post', function(request) {
   });
 ```
 
-**提示**：云引擎从 [0.3.0](https://github.com/leancloud/leanengine-node-sdk/blob/master/CHANGELOG.md#v030-20151231) 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
+**提示**：云引擎 Node.js 环境从 [0.3.0](https://github.com/leancloud/leanengine-node-sdk/blob/master/CHANGELOG.md#v030-20151231) 开始支持 `object.disableBeforeHook()` 和 `object.disableAfterHook()`。
 
 ### 错误响应码
 
@@ -573,57 +573,80 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 ## 定时任务
 
-很多时候可能你想做一些定期任务，比如半夜清理过期数据，或者每周一给所有用户发送推送消息等等，我们提供了定时任务给你，让你可以在云引擎中运行这样的任务。
-
-**我们提供的定时任务的最小时间单位是秒，正常情况下我们都能将误差控制在秒级别。**
+定时任务可以按照设定，以一定间隔自动完成指定动作，比如半夜清理过期数据，每周一向所有用户发送推送消息等等。定时任务的最小时间单位是**秒**，正常情况下时间误差都可以控制在秒级别。
 
 {% block timerLegacy %}{% endblock %}
 
-定时任务也是普通的云引擎函数，比如我们定义一个打印循环打印日志的任务 `log_timer`：
+定时任务是普通的云函数。比如定义一个打印循环打印日志的任务 `log_timer`：
 
 {% block timerExample %}{% endblock %}
 
-部署云引擎之后，进入云引擎管理菜单，左侧有个定时任务菜单：
+部署云引擎之后，进入 [控制台 > 存储 > 云引擎 > 在线编辑](/cloud.html?appid={{appid}}#/online)，在右侧页面中选择 **定时任务** > **创建定时器**，然后设定其所执行的函数名称、执行环境等等。
 
-![image](images/schedule_timer1.png)
-
-选择创建定时器，选择定时任务执行的函数名称，执行环境等等：
-
-![image](images/schedule_timer2.png)
+定时任务创建后，其状态为**未运行**，需要点击 <span class="label label-default">启用</span>。之后其执行日志可以通过 [其它 > 日志](/cloud.html?appid={{appid}}#/log) 查看。
 
 定时任务分为两类：
 
-* 使用标准的 crontab 语法调度
-* 简单的循环调度，我们这里以循环调度为例，每隔 5 分钟打印日志。
-
-创建后，定时任务还没有启动，你需要在定时任务列表里启动这个任务：
-
-![image](images/schedule_timer3.png)
-
-接下里就可以在云引擎日志里看到这条日志的打印：
-
-![image](images/schedule_timer4.png)
-
-我们再尝试定义一个复杂一点的任务，比如每周一早上 8 点准时发送推送消息给用户：
+* 使用 Cron 表达式（即[标准的 crontab 语法][quartz_docs]）安排调度
+* 以秒为单位的简单循环调度
+ 
+以 Cron 表达式为例，比如每周一早上 8 点准时发送推送消息给用户：
 
 {% block timerExample2 %}{% endblock %}
 
-创建定时器的时候，选择 cron 表达式并填写为 `0 0 8 ? * MON`。
+创建定时器的时候，选择 **Cron 表达式** 并填入 `0 0 8 ? * MON`。
 
-crontab 的基本语法是：
+### Cron 表达式
+
+Cron 表达式的基本语法为：
 
 ```
-秒 分钟 小时 每个月的日期（Day-of-Month）月份 星期（Day-of-Week） 年（可选）
+<秒> <分钟> <小时> <日期 day-of-month> <月份> <星期 day-of-week> <年>
 ```
+位置|字段|约束|取值|可使用的特殊字符
+---|---|---|---|---
+1|秒|必须|0-59|`, - * /`
+2|分钟|必须|0-59|`, - * /`
+3|小时|必须|0-23（0 为午夜）|`, - * /`
+4|日期|必须|1-31|`, - * ? / L W`
+5|月份|必须|1-12、JAN-DEC|`, - * /`
+6|星期|必须|1-7、SUN-SAT|`, - * ? / L #`
+7|年|可选|空、1970-2099|`, - * /`
 
-一些常见的例子：
+特殊字符的用法：
+- `*`（所有值）<br/>
+  代表一个字段的所有可能取值。如将 `<分钟>` 设为 **\***，即代表每一分钟。
+- `?`（不指定值）<br/>
+  用于可以使用该字符的两个字段中的一个，在一个表达式中只能出现一次。如任务执行时间为每月 10 号，星期几无所谓，那么表达式中 `<日期>` 设为 **10**，`<星期>` 设为 **?**。
+- `-`（范围）<br/>
+  如 `<小时>` 为 **10-12**，即10 点、11 点、12 点。
+- `,`（分隔多个值）<br/>
+  如 `<星期>` 为 **MON,WED,FRI**，即周一、周三、周五。
+- `/`（增量）<br/>
+  如 `<秒>` 设为 **0/15**，即从 0 秒开始，以 15 秒为增量，包括 0、15、30、45 秒；**5/15** 即 5、20、35、50 秒。**\*/** 与 **0/** 等效，如 `<日期>` 设为 **1/3**，即从每个月的第一天开始，每 3 天（即每隔 2 天）执行一次任务。
+- `L`（最后）<br/>
+  其含义随字段的不同而不同。 如 `<日期>` 中使用 **L** 代表每月最后一天，如 1 月 31 号、2 月 28 日（非闰年）；`<星期>` 中单独使用 **L**，则与使用 **7** 或 **SAT** 等效，若在其前搭配其他值使用，如 6L，则代表每月的最后一个星期五。
+
+  注意，**在 L 之前不要使用多个值或范围**，如 **1,2L**、**1-2L**，否则会产生错误结果。
+- `W`（weekday，即周一到周五的任意一天）<br/>
+  离指定日期最近的非周末的那一天。`<日期>` 为 **15W** 即为离 15 号最近的非周末的一天；如果 15 号是周六，任务则会在 14 号周五触发，如果 15 号是周日，则在 16 号周一触发，如果 15 号是周二，则周二当天触发。
+
+  `<日期>` 为 **1W**，如果 1 号是周六，任务则会在 3 号周一触发，因为不能向前跨月来计算天数。
+
+  在 `<日期>` 中 **W** 之前只能使用一个数值，不能使用多个值或范围。**LW** 可在 `<日期>` 中组合使用，表示每月最后一个非周末的一天。
+- `#`（第 N 次）<br />
+  如 `<星期>` 为 **6#3** 代表每月第三个周五，**2#1** 为每月头一个周一，**4#5** 为每月第五个周三；如果当月没有第五周，则 **#5** 不会产生作用。
+
+各字段以空格或空白隔开。JAN-DEC、SUN-SAT 这些值不区分大小写，比如 MON 和 mon 效果一样。更详细的使用方法请参考 [Quartz 文档（英文）][quartz_docs]。
+
+举例如下：
 
 表达式|说明
 ---|---
-`"0 0/5 * * * ?"`|每隔 5 分钟执行一次
-`"10 0/5 * * * ?"`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
-<code style="white-space:nowrap;">"0 30 10-13 ? * WED,FRI"</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
-`"0 0/30 8-9 5,20 * ?"`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
+`0  0/5 * * * ?`|每隔 5 分钟执行一次
+`10 0/5 * * * ?`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
+<code style="white-space:nowrap;">0 30 10-13 ? * WED,FRI</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
+`0 0/30 8-9 5,20 * ?`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
 
 ## 资源限制
 
@@ -953,3 +976,4 @@ console.log('getHours', time.hours())
 为了方便大家的使用，更加符合通常的习惯，云引擎运行时环境（无沙箱的 Node.js 环境和 Python 环境）都是使用**东八区**作为默认时区。当然，我们仍然建议程序的时间字符串带有时区标志。
 
 {% block introduceCloudCodeV2 %}{% endblock %}
+[quartz_docs]: http://www.quartz-scheduler.org/documentation/quartz-1.x/tutorials/crontrigger  "Quartz 文档"
