fix(LeanEngine): 增加定时器错误信息和原因
Closes #901

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -583,7 +583,7 @@ ssh-rsa AAAAB3NzaC1yc2EAAAABIwAAAQEA5EZmrZZjbKb07yipeSkL+Hm+9mZAqyMfPu6BTAib+RVy
 
 部署云引擎之后，进入 [控制台 > 存储 > 云引擎 > 在线编辑](/cloud.html?appid={{appid}}#/online)，在右侧页面中选择 **定时任务** > **创建定时器**，然后设定其所执行的函数名称、执行环境等等。
 
-定时任务创建后，其状态为**未运行**，需要点击 <span class="label label-default">启用</span>。之后其执行日志可以通过 [其它 > 日志](/cloud.html?appid={{appid}}#/log) 查看。
+定时器创建后，其状态为**未运行**，需要点击 <span class="label label-default">启用</span> 来激活。之后其执行日志可以通过 [其它 > 日志](/cloud.html?appid={{appid}}#/log) 查看。
 
 定时任务分为两类：
 
@@ -615,7 +615,7 @@ Cron 表达式的基本语法为：
 
 特殊字符的用法：
 - `*`（所有值）<br/>
-  代表一个字段的所有可能取值。如将 `<分钟>` 设为 **\***，即代表每一分钟。
+  代表一个字段的所有可能取值。如将 `<分钟>` 设为 **\***，表示每一分钟。
 - `?`（不指定值）<br/>
   用于可以使用该字符的两个字段中的一个，在一个表达式中只能出现一次。如任务执行时间为每月 10 号，星期几无所谓，那么表达式中 `<日期>` 设为 **10**，`<星期>` 设为 **?**。
 - `-`（范围）<br/>
@@ -625,11 +625,11 @@ Cron 表达式的基本语法为：
 - `/`（增量）<br/>
   如 `<秒>` 设为 **0/15**，即从 0 秒开始，以 15 秒为增量，包括 0、15、30、45 秒；**5/15** 即 5、20、35、50 秒。**\*/** 与 **0/** 等效，如 `<日期>` 设为 **1/3**，即从每个月的第一天开始，每 3 天（即每隔 2 天）执行一次任务。
 - `L`（最后）<br/>
-  其含义随字段的不同而不同。 如 `<日期>` 中使用 **L** 代表每月最后一天，如 1 月 31 号、2 月 28 日（非闰年）；`<星期>` 中单独使用 **L**，则与使用 **7** 或 **SAT** 等效，若在其前搭配其他值使用，如 6L，则代表每月的最后一个星期五。
+  其含义随字段的不同而不同。 `<日期>` 中使用 **L** 代表每月最后一天，如 1 月 31 号、2 月 28 日（非闰年）；`<星期>` 中单独使用 **L**，则与使用 **7** 或 **SAT** 等效，若前面搭配其他值使用，如 **6L**，则表示每月的最后一个星期五。
 
   注意，**在 L 之前不要使用多个值或范围**，如 **1,2L**、**1-2L**，否则会产生错误结果。
-- `W`（weekday，即周一到周五的任意一天）<br/>
-  离指定日期最近的非周末的那一天。`<日期>` 为 **15W** 即为离 15 号最近的非周末的一天；如果 15 号是周六，任务则会在 14 号周五触发，如果 15 号是周日，则在 16 号周一触发，如果 15 号是周二，则周二当天触发。
+- `W`（weekday，周一到周五的任意一天）<br/>
+  离指定日期最近的非周末的那一天。`<日期>` 为 **15W** 即离 15 号最近的非周末的一天；如果 15 号是周六，任务则会在 14 号周五触发，如果 15 号是周日，则在 16 号周一触发，如果 15 号是周二，则周二当天触发。
 
   `<日期>` 为 **1W**，如果 1 号是周六，任务则会在 3 号周一触发，因为不能向前跨月来计算天数。
 
@@ -647,6 +647,15 @@ Cron 表达式的基本语法为：
 `10 0/5 * * * ?`|每隔 5 分钟执行一次，每次执行都在分钟开始的 10 秒，例如 10:00:10、10:05:10 等等。
 <code style="white-space:nowrap;">0 30 10-13 ? * WED,FRI</code>|每周三和每周五的 10:30、11:30、12:30、13:30 执行。
 `0 0/30 8-9 5,20 * ?`| 每个月的 5 号和 20 号的 8 点和 10 点之间每隔 30 分钟执行一次，也就是 8:00、8:30、9:00 和 9:30。
+
+### 错误信息
+
+定时器执行后的日志会记录在 [控制台 > 存储 > 云引擎 > 其它 > 日志](/cloud.html?appid={{appid}}#/log) 中，以下为常见的错误信息及原因。
+
+- **timerAction timed-out and no fallback available.**<br/>
+  某个定时器触发的云函数，因 15 秒内没有响应而超时。
+- **timerAction short-circuited and no fallback available.**<br/>
+  某个定时器触发的云函数，因为太多次超时而停止触发。
 
 ## 资源限制
 
