promote error_code page to overview section

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -89,6 +89,7 @@
             <li><a href="realtime_v2.html">实时通信服务总览</a></li>
             <li><a href="dashboard_guide.html">控制台使用指南</a></li>
             <li><a href="data_security.html">数据和安全</a></li>
+            <li><a href="error_code.html">错误码详解</a></li>
             <li><a href="faq.html">常见问题</a></li>
             <li><a href="tool_tips.html">常见功能提示</a></li>
           </ul>
