fix(chore): 为搜索框增加「搜索错误代码」提示 placeholder

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,7 +5,7 @@
     <h4>LeanCloud 官方开发者文档（<a href="leancloud-docs.tar.gz">离线下载</a>）</h4>
     <form class="hero-search" role="search" action="/search.html" method="get">
       <div class="form-group">
-        <input name="q" type="text" class="form-control input-lg" placeholder="搜索全部文档&hellip;">
+        <input name="q" type="text" class="form-control input-lg" placeholder="搜索全部文档、错误代码&hellip;">
       </div>
     </form>
   </div>
